[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project_ryland"
version = "0.0.1"
description = "This project develops standaardized tools to use LLMs in research studies for improving patient care."
authors = [
  { name = "Justin Vinh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10"


[tool.ruff]
line-length = 99
src = ["project_ryland_code"]
include = ["pyproject.toml", "project_ryland_code/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["project_ryland_code"]
force-sort-within-sections = true

